[package]
name = "radixmap"
version = "0.2.2"
authors = ["Jian Chen <admin@chensoft.com>"]
edition = "2021"
description = "Rust-based Radix Tree for fast prefix lookup, supporting named param, glob, regex"
documentation = "https://docs.rs/radixmap"
readme = "README.md"
repository = "https://github.com/chensoft/radixmap"
license = "MIT"
keywords = ["radixtree", "radixmap", "radixset", "glob", "regex"]

[dependencies]
glob = "0.3"
bytes = "1.6"
regex = "1.10"
memchr = "2.7"
vec_map = "0.8"
indexmap = "2.2"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "lookup"
harness = false

[[bench]]
name = "insert"
harness = false
